2003/09/02 09:45 rwmcfa1

	* xs/GnomeFont.xs: xsubpp wants a blank line between each function,
	at least mine/most do. a couple of the ones commited below didn't have
	them.

2003/08/29 15:26 ebassi

	* xs/GnomeFont.xs: implemented more font size methods: 
	  	gnome_font_get_glyph_width,
	  	gnome_font_get_ascender,
	  	gnome_font_get_descender,
	  	gnome_font_get_underline_position,
	  	gnome_font_get_underline_thickness,
		gnome_font_get_width_utf8,
		gnome_font_get_width_utf8_sized
	* examples/basic-font.pl: changed the searched font name to
	  "Monospace Regular".
	
2003/08/23 10:25 ebassi
	
	* pm/Config.pm, pm/Font.pm: corrected some typos in the pod
	  documentation.
	
2003/08/22 12:37 ebassi

	* Makefile.PL: prefixed the filename of the man pages with the correct
	  namespace (Gnome2::*).

2003/08/22 02:19 muppetman

	* README: new file, need it if you're going to distribute

	* Print.pm: mangled my email, tailored Gtk2 text to Gnome2::Print

2003/08/21 0:41 ebassi

	* t/07.GnomePrintUnit.t: fixed GnomePrintUnit test.

2003/08/21 0:22 ebassi
	
	* xs/GnomePrintUnit.xs: implemented Gnome2::Print::Unit methods.
	* xs/GnomePrintDialog.xs: default flag (=0) for GnomePrintDialog
	  constructor.
	* xs/GnomeFont.xs: corrected a stupid typo.
	* Makefile.PL: removed libgnomeprintui-2.0 from the package
	  configuration setup; libgnomeprintui-2.0 (version 1.11x), needed
	  by GNOME 2.0, still uses the old Glib 1.2 type system, so it won't
	  compile anyway. Only libgnomeprint/libgnomeprintui >= 2.2 will be
	  supported.

2003/08/19 21:11 rwmcfa1

	* Makefile.PL: added realclean removal of build dir to postamble 
	section.

2003/08/18 14:44 ebassi
	
	* xs/GnomePrint2.xs: added "get_version" class method; this method
	  returns a string containing the version of libgnomeprint, as taken
	  from the package config.
	* pm/Config.pm: constant keys for GnomePrintConfig.
	* xs/GnomePrintConfig.xs: get/set methods and key macros.