@@ -1,0 +1,63 @@
+Summary: Gnome2-Print Perl module
+Name: perl-Gnome2-Print
+Version: @VERSION@
+Release: 1
+Packager: gtk-perl-list@gnome.org
+License: LGPL
+Group: Development/Libraries
+URL: http://search.cpan.org/dist/Gnome2-Print/
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
+BuildRequires: perl >= 2:5.8.0
+BuildRequires: libgnomeprintui22-devel >= 2.2.1.1
+BuildRequires: perl-ExtUtils-Depends >= 0.103
+BuildRequires: perl-Glib >= 0.97
+BuildRequires: perl-Gtk2 >= 0.97
+BuildRequires: libgnomeprintui22 >= 2.2.1.1
+BuildRequires: perl-Glib >= 0.97
+BuildRequires: perl-Gtk2 >= 0.97
+Requires: %(perl -MConfig -le 'if (defined $Config{useithreads}) { print "perl(:WITH_ITHREADS)" } else { print "perl(:WITHOUT_ITHREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{usethreads}) { print "perl(:WITH_THREADS)" } else { print "perl(:WITHOUT_THREADS)" }')
+Requires: %(perl -MConfig -le 'if (defined $Config{uselargefiles}) { print "perl(:WITH_LARGEFILES)" } else { print "perl(:WITHOUT_LARGEFILES)" }')
+Source0: @SOURCE@
+
+%description
+This module allows you to use the GNOME Print libraries within your
+applications written using the gtk2-perl wrapper.  The GNOME Print libraries
+(also known as libgnomeprint and libgnomeprintui) allow you to create
+printable documents (using various frontends) and offer standard widgets in
+order to mainatin a UI consistent for all GNOME applications.
+
+%prep
+%setup -q -n Gnome2-Print-%{version}
+
+%build
+CFLAGS="$RPM_OPT_FLAGS" perl Makefile.PL PREFIX=$RPM_BUILD_ROOT%{_prefix} 
+make OPTIMIZE="$RPM_OPT_FLAGS"
+make test
+
+%install
+rm -rf $RPM_BUILD_ROOT
+eval `perl '-V:installarchlib'`
+mkdir -p $RPM_BUILD_ROOT$installarchlib
+%makeinstall
+rm -f `find $RPM_BUILD_ROOT -type f -name perllocal.pod -o -name .packlist`
+
+[ -x %{_libdir}/rpm/brp-compress ] && %{_libdir}/rpm/brp-compress
+
+find $RPM_BUILD_ROOT%{_prefix} -type f -print | \
+	sed "s@^$RPM_BUILD_ROOT@@g" > %{name}-%{version}-%{release}-filelist
+if [ "$(cat %{name}-%{version}-%{release}-filelist)X" = "X" ] ; then
+    echo "ERROR: EMPTY FILE LIST"
+    exit 1
+fi
+
+%clean
+rm -rf $RPM_BUILD_ROOT
+
+%files -f %{name}-%{version}-%{release}-filelist
+%defattr(-,root,root,-)
+
+%changelog
+* Thu Sep 04 2003 gtk-perl-list@gnome.org - 0.5-8
+- Specfile autogenerated.
+
