@@ -1,3 +1,9 @@
+2003/09/06 19:23 rwmcfa1
+
+	* Makefile.PL: dist-rpms build target added
+
+	* perl-Gnome2-Prins.spec.in: initial import
+
 2003/09/02 09:45 rwmcfa1
 
 	* xs/GnomeFont.xs: xsubpp wants a blank line between each function,
